--- a/fileupload/templates/fileupload/home.html
+++ b/fileupload/templates/fileupload/home.html
@@ -18,7 +18,9 @@
                 </ul>
                 <p>File Upload widget with multiple file selection for jQuery. Supports cross-domain, chunked and
                     resumable file uploads and works with Django.</p>
-                <input id="fileupload" type="file" name="files" multiple
+                <p>NOTE: This page must contain {% verbatim %}{{ csrf_token }}{% endverbatim %} because csrf cookie is
+                    not activated when loaded for the first time.</p>
+                <input id="id_files" type="file" name="files" multiple
                        class="card text-white bg-success my-4"
                        data-form-data='{"csrfmiddlewaretoken": "{{ csrf_token }}"}'>
             </div>
@@ -34,5 +36,6 @@
     <script src="{% static 'js/vendor/jquery.ui.widget.js' %}"></script>
     <script src="{% static 'js/vendor/jquery.iframe-transport.js' %}"></script>
     <script src="{% static 'js/vendor/jquery.fileupload.js' %}"></script>
+    <script src="{% static 'js/csrf-cookie.js' %}"></script>
     <script src="{% static "js/basic-upload.js" %}"></script>
 {% endblock %}
