- csrf/jquery-ajax

--- a/fileupload/templates/fileupload/post_create.html
+++ b/fileupload/templates/fileupload/post_create.html
@@ -25,5 +25,5 @@
     <script src="{% static 'js/vendor/jquery.iframe-transport.js' %}"></script>
     <script src="{% static 'js/vendor/jquery.fileupload.js' %}"></script>
     <script src="{% static 'js/csrf-cookie.js' %}"></script>
-    <script src="{% static "js/basic-upload.js" %}"></script>
+    <script src="{% static "js/post-basic-upload.js" %}"></script>
 {% endblock %}
